--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@angular/common": "~10.0.4",
     "@angular/compiler": "~10.0.4",
     "@angular/core": "~10.0.4",
+    "@angular/elements": "^10.0.4",
     "@angular/forms": "~10.0.4",
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular-material": "^1.1.24",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
